--- a/styles/less/isotope.less
+++ b/styles/less/isotope.less
@@ -1,15 +1,13 @@
 .isocontent {
 	background: #222;
-
 }
-
 
 .isotope-item {
 	display: block;
 	float: left;
 	position: relative;
 	overflow: hidden;
-	width: 25%;
+	width: 24.99999% !important;
 }
 
 a.isotope-link {
@@ -21,8 +19,9 @@ a.isotope-link {
 	background-repeat: no-repeat;
 	opacity: 0.65;
 	display: block;
-	height: 25vw;
+	width: 100%;
 	min-height: 200px;
+	height: 25vw;
 	-webkit-transition-duration: 0.2s;
 	-moz-transition-duration: 0.2s;
 	-o-transition-duration: 0.2s;
@@ -39,15 +38,15 @@ a.isotope-link:focus {
 
 
 a.isotope-link .isotope-caption {
-	display: none;
+	.hidden
 	}
 
 	
 	a.isotope-link:hover .isotope-caption,
 	a.isotope-link:focus .isotope-caption {
 		display: block;
-		position: absolute;
-		bottom: 0;
+		position: relative;
+		top: 0;
 		left: 0;
 		background: #fff;
 		padding-left: .5rem;
