Syncing with server

--- a/styles/less/isotope.less
+++ b/styles/less/isotope.less
@@ -7,7 +7,7 @@
 	float: left;
 	position: relative;
 	overflow: hidden;
-	width: 24.99999% !important;
+	width: 25% !important;
 }
 
 a.isotope-link {
@@ -20,13 +20,15 @@ a.isotope-link {
 	opacity: 0.65;
 	display: block;
 	width: 100%;
-	min-height: 200px;
-	height: 25vw;
 	-webkit-transition-duration: 0.2s;
 	-moz-transition-duration: 0.2s;
 	-o-transition-duration: 0.2s;
 	transition-duration: 0.2s;
 	-webkit-filter: grayscale(100%);   
+	height: 25vw;
+	min-height: 25vw;
+
+	
 }
 
 a.isotope-link:hover,
